# HeartsNN

./: .buckconfig  .clang-format  .gitignore  .gitmodules  BUCK  BUILD  BUILD.md  CMakeLists.txt  LICENSE  Makefile  README.md  analyze.cpp  build-hearts.sh  build-images.sh  constants.py  disttest.cpp  do.sh  gather.py  hearts.cpp  learning_rate_hook.py  lzcnttest.cpp  memmap.py  merge_datasets.py  merge_memmaps.py  model.py  play.cpp  save_to_memmap.py  splitdata.py  tensorflow.cmake  testnpwriter.py  tournament.cpp  train.py  transform.py  validate.cpp  validate.py  validator.py
Dockerfiles/: build  generation-0  heartsnn  tf-protobuf  tf-protobuf-grpc  websocketserver
apps/: CMakeLists.txt  deal.cpp  numpywriter.cpp  play.cpp
cmake/: dlib.cmake  genbuild.sh  sublime.sh  tensorflow.cmake
cmake/buildconfigs/: debug.cmake  release.cmake
devbin/: build.sh  docker-build.sh
docker/: build-images.sh
docker/build-artifacts/: Dockerfile
docker/heartsnn/: Dockerfile
docker/heartsnn-build/: Dockerfile
docker/tf-protobuf/: Dockerfile
docker/tf-protobuf-grpc/: Dockerfile
helloworld/: CMakeLists.txt
lib/: Annotator.cpp  Annotator.h  Bits.h  CMakeLists.txt  Card.cpp  Card.h  CardArray.cpp  CardArray.h  Deal.cpp  Deal.h  DebugStats.h  Distribution.cpp  Distribution.h  DnnModelIntuition.cpp  DnnModelIntuition.h  DnnModelStrategy.cpp  DnnModelStrategy.h  DnnMonteCarlo.cpp  DnnMonteCarlo.h  DnnMonteCarloAnnotator.cpp  DnnMonteCarloAnnotator.h  GameOutcome.cpp  GameOutcome.h  GameState.cpp  GameState.h  HeartsState.cpp  HeartsState.h  HumanPlayer.cpp  HumanPlayer.h  KnowableState.cpp  KnowableState.h  MonteCarlo.cpp  MonteCarlo.h  NoVoidsAnalyzer.cpp  NoVoidsAnalyzer.h  NumpyWriter.h  OneOpponentGetsSuit.cpp  OneOpponentGetsSuit.h  PossibilityAnalyzer.cpp  PossibilityAnalyzer.h  (+32 more)
mode/: opt
play_hearts/: AbstractClient.cpp  AbstractClient.h  CMakeLists.txt  conversions.h
play_hearts/cliclient/: CMakeLists.txt  cliclient.cpp
play_hearts/cmake/: FindGRPC.cmake
play_hearts/protos/: play_hearts.proto
play_hearts/server/: CMakeLists.txt  ClientPlayer.cpp  ClientPlayer.h  PlayerSession.cpp  PlayerSession.h  play_hearts_server.cpp
play_hearts/testclient/: CMakeLists.txt  play_hearts_client.cpp
python/: README.md  constants.py  merge_datasets.py  merge_memmaps.py  readfile.py  train.py
tests/: Bits.cpp  CMakeLists.txt  Card.cpp  CardArray.cpp  Deal.cpp  KnowableState.cpp  VisibleState.cpp  combinatorics.cpp  nominal.cpp  random.cpp
tf/tensorflow/cc/ops/: math_ops.h  remote_fused_graph_ops.h
tf/tensorflow/contrib/boosted_trees/proto/: learner.pb.h  tree_config.pb.h
tf/tensorflow/contrib/decision_trees/proto/: generic_tree_model.pb.h  generic_tree_model_extensions.pb.h
tf/tensorflow/contrib/lite/schema/: schema_generated.h
tf/tensorflow/contrib/lite/toco/: model_flags.pb.h  toco_flags.pb.h  types.pb.h
tf/tensorflow/contrib/tensor_forest/proto/: fertile_stats.pb.h  tensor_forest_params.pb.h
tf/tensorflow/python/: array_ops_pygenrule.genrule_script.sh  audio_ops_pygenrule.genrule_script.sh  bitwise_ops_pygenrule.genrule_script.sh  candidate_sampling_ops_pygenrule.genrule_script.sh  checkpoint_ops_pygenrule.genrule_script.sh  control_flow_ops_pygenrule.genrule_script.sh  ctc_ops_pygenrule.genrule_script.sh  data_flow_ops_pygenrule.genrule_script.sh  dataset_ops_pygenrule.genrule_script.sh  functional_ops_pygenrule.genrule_script.sh  image_ops_pygenrule.genrule_script.sh  io_ops_pygenrule.genrule_script.sh  linalg_ops_pygenrule.genrule_script.sh  logging_ops_pygenrule.genrule_script.sh  lookup_ops_pygenrule.genrule_script.sh  math_ops_pygenrule.genrule_script.sh  nn_ops_pygenrule.genrule_script.sh  parsing_ops_pygenrule.genrule_script.sh  random_ops_pygenrule.genrule_script.sh  resource_variable_ops_pygenrule.genrule_script.sh  script_ops_pygenrule.genrule_script.sh  sdca_ops_pygenrule.genrule_script.sh  set_ops_pygenrule.genrule_script.sh  sparse_ops_pygenrule.genrule_script.sh  spectral_ops_pygenrule.genrule_script.sh  state_ops_pygenrule.genrule_script.sh  string_ops_pygenrule.genrule_script.sh  training_ops_pygenrule.genrule_script.sh  user_ops_pygenrule.genrule_script.sh
tf/tensorflow/python/framework/: cpp_shape_inference.pb.h
websockets/: CMakeLists.txt  CardsWebServer.cpp  CardsWebServer.hpp  WebsocketPlayer.cpp  WebsocketPlayer.hpp  webSocketServer.cpp
websockets/helpers/: AsyncFileStreamer.h
websockets/public/: index.html
