add_executable(analyze analyze.cpp)
add_executable(deal deal.cpp)
add_executable(disttest disttest.cpp)
add_executable(hearts hearts.cpp)
add_executable(tournament tournament.cpp)
add_executable(validate validate.cpp)
add_executable(numpywriter numpywriter.cpp)
add_executable(play play.cpp)

target_link_libraries(analyze core_lib)
target_link_libraries(deal core_lib)
target_link_libraries(disttest core_lib)
target_link_libraries(hearts core_lib)
target_link_libraries(tournament core_lib)
target_link_libraries(validate core_lib)
target_link_libraries(numpywriter core_lib)
target_link_libraries(play core_lib)
